--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,3 @@
-# This file contains contributors to the repository.
+# This file contains contributor to the repository.
 
 Ifeoluwa Oni <ifeoluwaoludamilare@gmail.com> @luwadeni (github handle)
-Oludare Zenos <contactzen247@gmail.com> @skilogistics (github handle)
