--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,3 @@
-# These individuals contributed to the hbnb project in this repository 
+# contributor to the Airbnb project in this repository 
 
-Adam Sanusi Babatunde <tundey520@gmail.com>
-Linda Nwachukwu <lindaihuoma@gmail.com>
-Hassanyoung1 <hhassanhakeem@gmail.com>
-Ezra Nobrega <ezra.nobrega@outlook.com>
-Justin Majetich <justinmajetich@gmail.com>
+Ifeoluwa Oni  <ifeoluwaoludamilare@gmail.com>
